# luajit-experimental

./: .gitignore  .luacheckrc  .travis.yml  CMakeLists.txt  CMakeLists_Bundle.txt  CMakeLists_Complete.txt  CMakeLists_Old.txt  Makefile  build-clang-debug.sh  build-gcc.sh  meson.build
.github/workflows/: exotic-builds-testing.yml  valgrind-testing.yaml
cmake/: DebugCompilerFlags.cmake  OptimizeCompilerFlags.cmake
cmake_old/: BuildHostTools.cmake  FindReadline.cmake
lua/: nanoid.lua
src/: Makefile  Makefile.dep.original  Makefile.original  lib_aux.c  lib_base.c  lib_debug.c  lib_ffi.c  lib_io.c  lib_jit.c  lib_misc.c  lib_os.c  lib_table.c  libpopcnt.h  lj_api.c  lj_arch.h  lj_arena.c  lj_arena.h  lj_asm.c  lj_asm_arm64.h  lj_asm_x86.h  lj_ccall.c  lj_ccallback.c  lj_cdata.c  lj_clib.c  lj_cparse.c  lj_crecord.c  lj_ctype.c  lj_ctype.h  lj_debug.c  lj_def.h  lj_err.c  lj_errmsg.h  lj_ffrecord.c  lj_gc.c  lj_gc.h  lj_intrin.h  lj_ir.c  lj_ir.h  lj_jit.h  lj_lex.c  (+31 more)
src/host/: .gitignore  buildvm_asm.c  buildvm_lib.c
src/jit/: bcsave.lua
src/luv/: constants.c  fs_poll.c  lhandle.c  lprefix.h  metrics.c  misc.c  private.h
src/mimalloc/: init.c
std/: class.lua
test/: CMakeLists.txt  basic-test.lua
test/LuaJIT-tests/: CMakeLists.txt
test/tarantool-c-tests/: CMakeLists.txt  gh-8594-sysprof-ffunc-crash.test.c  misclib-sysprof-capi.test.c
test/tarantool-tests/: CMakeLists.txt  fix-argv-handling.test.lua  fix-recording-bc-varg-used-in-select.test.lua  gh-7745-oom-on-trace.test.lua  lj-1116-redzones-checks.test.lua  lj-918-fma-numerical-accuracy-jit.test.lua  (+2 more)
(+8 files in other folders)
